--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -4666,7 +4666,7 @@ ul.tab-fill li:hover{
   font-size: 15px;
   margin-bottom: 5px;
   width: 100%;
-  overflow: hidden;
+  /*overflow: hidden;*/
   white-space: nowrap;
   text-overflow: ellipsis;
 }
