--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -2920,13 +2920,23 @@
 
 		.product_item .countdown{ margin-bottom:14px; }
 
-		.product_item .description{ line-height: 18px; }
+		.product_item .description{
+			line-height: 18px;
+			/*width: 90%;*/
+			overflow: hidden;
+			white-space: nowrap;
+			text-overflow: ellipsis;
+		}
 
 		.product_item .product_info{ margin-top: 7px; }
 
 		.product_info .product_price:only-child{ float: none; }
 
-		.product_item .image_wrap{ text-align: center; }
+		.product_item .image_wrap{
+			text-align: center;
+			width: 220px;
+			height: 165px;
+		}
 
 		.product_price{ 
 			font-size:16px;
@@ -4098,6 +4108,12 @@
 
 	.seller_info .photo{ margin-right:15px;    width: 50px; }
 
+	.kho_info{
+		margin-bottom:10px;
+		margin-top: 10px;
+	}
+	.kho_info .photo{ margin-right:15px;    width: 20px; }
+
 	.seller_info .wrapper{ padding:5px 0 0; }
 
 	.seller_stats > li:not(:first-child){ margin-top: 3px; }
@@ -4385,6 +4401,7 @@
 		position: relative;
 		z-index: 102;
 		padding: 19px;
+		max-width: 219px;
 	}
 
 	.table_cell::after,
@@ -6768,8 +6785,8 @@ ol, ul {
 }
 /*end track*/
 .product_item .image_wrap img{
-	max-height: 243px;
-	width: 243px;
+	max-height: 135px;
+	width: 220px;
 }
 .product_item .image_wrap img {
 	max-width: 100%;
@@ -6876,6 +6893,33 @@ a:focus, a:hover{
 	max-height: 300px;
 	min-height: 300px;
 	overflow: hidden;
+}
+.detail_veryfi .left_arrow_carousel {
+	left: -3% !important;
+	top: 70% !important;
+}
+.left_arrow_carousel {
+	position: absolute;
+	left: 2%;
+	top: 50%;
+	font-size: 24px;
+	color: #999;
+	z-index: 2;
+}
+.detail_veryfi .right_arrow_carousel {
+	right: -3% !important;
+	top: 70% !important;
+}
+.right_arrow_carousel {
+	position: absolute;
+	right: 2%;
+	top: 50%;
+	font-size: 24px;
+	color: #999;
+}
+.image_verified img {
+	width: 140px !important;
+	height: 140px !important;
 }
 .clear {
 	clear: both;
