--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -6501,7 +6501,7 @@ ol, ul {
 }
 .ul-date-car li {
 	float: left;
-	width: 9%;
+	width: 10%;
 	text-align: center;
 	text-transform: uppercase;
 	font-weight: bold;
@@ -6923,4 +6923,19 @@ a:focus, a:hover{
 }
 .clear {
 	clear: both;
+}
+@media only screen and (max-width:767px) {
+	.date-past {
+		display: none;
+	}
+	.date-past.active {
+		display: block;
+		text-align: center;
+		margin: 0 auto;
+		width: auto;
+		float: none;
+	}
+	.ul-date-car li{
+		position: relative;
+	}
 }
