--- a/public/css/bootstrap-material-design.css
+++ b/public/css/bootstrap-material-design.css
@@ -1943,7 +1943,7 @@ label.control-label {
 .form-group.label-static label.control-label,
 .form-group.label-floating.is-focused label.control-label,
 .form-group.label-floating:not(.is-empty) label.control-label {
-  top: -30px;
+  top: -20px;
   left: 0;
   font-size: 12px;
   line-height: 1.07142857;
@@ -2765,7 +2765,7 @@ fieldset[disabled] .navbar .btn-link:focus {
   color: rgba(255,255,255, 0.84);
 }
 .alert.alert-success {
-  background-color: palegreen;
+  background-color: lawngreen;
   color: rgba(255,255,255, 0.84);
   border-radius: 5px !important;
   box-shadow: 1px 1px 1px 0 rgba(0,0,0,.07),1px 2px 5px 0 rgba(0,0,0,.06) !important;
