--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -842,7 +842,7 @@ h2 {
   padding: 10px 17px;
   display: inline-block;
   background: #fff;
-  border: 1px solid #E6E9ED;
+  /*border: 1px solid #E6E9ED;*/
   -webkit-column-break-inside: avoid;
   -moz-column-break-inside: avoid;
   column-break-inside: avoid;
@@ -5568,7 +5568,7 @@ table.dtp-picker-days thead{
 }
 .list-unstyled span.label-box{
   display: inline-block;
-  width: 150px;
+  width: 100px;
 }
 .list-unstyled span.label-box55{
   display: inline-block;
